# K9db

./: .bazelignore  .bazelrc  .clang-format  .dockerignore  .gitignore  .gitmodules  .lsan_jvm_suppress.txt  .travis.yml  .tsan_jvm_suppress.txt  BUILD  BUILD.bazel  CMakeLists.txt  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.dev.arm64  Dockerfile.release  LICENSE  Makefile  README.md  WORKSPACE  WORKSPACE.bazel  bazel-cmakelists.py  complex.sql  configure_db.sh  configure_docker.sh  contributing.md  cpplint.py  format-java.bzl  format.sh  run.sh  simple.sql  stderr  stdout  user_data.txt  user_data2.txt  vendor-rust.sh
baseline/: BUILD.bazel  MemcachedJNI.cc  MemcachedJNI.java  MemcachedJNITest.java  memcached.cc  memcached.h  memcached_ffi_unittest.rs  memcached_ffi_wrappers.rs  memcached_unittest.cc
examples/: BUILD.bazel  PreparedStatements.java  medical_chat.sql  medical_chat_delf_anonymize.sql  owncloud.sql  owncloud_owners.sql  secondary_index.sql  simple-websubmit.sql  social_chat.cntd.sql  social_chat.sql  social_chat_cntd.sql  test.bzl  websubmit.sql  websubmit_cntd.sql
experiments/lobsters/: .gitignore  BUILD.bazel  Cargo.toml  README.md  WORKSPACE.bazel  generate.sh  lobsters.cc  local-expr.sh  make.sh  queries.sh  queries.sql  run-baseline.sh  run-pelton.sh  scaleusers.sh  schema-simplified-allfks.sql  schema-simplified.sql  schema.sql  server-scaleusers.sh  trivial.sh  views.sql
experiments/memcached/: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  README.md  WORKSPACE.bazel  deps.bzl
experiments/memcached-memory/: .gitignore  WORKSPACE.bazel  bazel-memcached-memory  deps.bzl
experiments/ownCloud/: .gitignore  BUILD.bazel  Cargo.toml  README.md  WORKSPACE.bazel  benchmark_harness.rs  combined-results.csv  documents_data.sql  lib.rs  ownCloud-comparison.sh  ownCloud-scaleusers.sh  owncloud-query-ana.md  schema.sql
experiments/vote/: BUILD.bazel  Cargo.toml  README.md  WORKSPACE.bazel  bazel-vote
jni/: BUILD.bazel  PeltonJNI.cc  PeltonJNI.java
k9db/: BUILD.bazel  connection.cc  connection.h  ctx.cc  ctx.h  explain.cc  explain.h  k9db.cc  k9db.h  prepared.cc  prepared.h
k9db/dataflow/: BUILD.bazel  channel.cc  channel.h  future.cc  future.h  future_unittest.cc  generator.cc  generator.h  graph.cc  graph.h  graph_partition.cc  graph_partition.h  graph_partition_unittest.cc  graph_unittest.cc  key.cc  key.h  key_unittest.cc  operator.cc  operator.h  operator_type.h  record.cc  record.h  record_unittest.cc  schema.cc  schema.h  schema_unittest.cc  state.cc  state.h  types.h
k9db/planner/: BUILD.bazel  planner.cc  planner.h  planner_unittest.cc
k9db/policy/: BUILD.bazel  abstract_policy.cc  abstract_policy.h  policy_builder.cc  policy_builder.h  policy_engine.cc  policy_engine.h  policy_state.cc  policy_state.h
k9db/proxy/: .rustfmt.toml  BUILD.bazel  Cargo.toml
k9db/shards/: BUILD.bazel  state.cc  state.h  types.cc  types.h
k9db/sql/: BUILD.bazel  connection.h  factory.cc  factory.h  result.cc  result.h
k9db/sqlast/: BUILD.bazel  ast.h  ast_abstract.cc  ast_abstract.h  ast_expressions.cc  ast_expressions.h  ast_policy.cc  ast_policy.h  ast_schema.cc  ast_schema.h  ast_schema_enums.h  ast_statements.cc  ast_statements.h  ast_value.cc  ast_value.h  ast_value_unittest.cc  ast_visitors.cc  ast_visitors.h  command.cc  command.h  hacky.cc  hacky.h  hacky_util.h  parser.cc  parser.h  transformer.cc  transformer.h  value_mapper.cc  value_mapper.h
k9db/util/: BUILD.bazel  error.cc  error.h  fs.cc  fs.h  indexed_mutex.cc  indexed_mutex.h  ints.cc  ints.h  ints_unittest.cc  iterator.h  iterator_unittest.cc  merge_sort.h  shard_name.cc  shard_name.h  status.h  type_utils.h  upgradable_lock.cc  upgradable_lock.h
mysql_proxy/: .gitignore  BUILD.bazel  Cargo.toml  README.md  build.rs  readme.md
mysql_proxy/.cargo/: config
mysql_proxy/src/: BUILD.bazel  main.rs  open_ffi.rs  open_ffi_old.rs  open_wrappers.rs  proxy_ffi.rs  proxy_ffi_wrappers.rs  proxy_wrappers.rs  wrappers.rs
pelton/: BUILD.bazel  connection.cc  connection.h  ctx.cc  ctx.h  explain.cc  explain.h  pelton.cc  pelton.h  prepared.cc  prepared.h  todo.inc  types.cc  types.h
pelton/benches/: BUILD.bazel  matview.cc
pelton/benchmark/: BUILD.bazel  benchmark.cc  client.cc  client.h
pelton/dataflow/: BUILD.bazel  batch_message.h  channel.cc  channel.h  channel_unittest.cc  edge.cc  edge.h  engine.cc  engine.h  engine_unittest.cc  future.cc  future.h  future_unittest.cc  generator.cc  generator.h  graph.cc  graph.h  graph_partition.cc  graph_partition.h  graph_partition_unittest.cc  graph_test_utils.h  graph_traversal.inc  graph_unittest.cc  grouped_data.h  key.cc  key.h  key_unittest.cc  message.h  operator.cc  operator.h  partition.cc  partition.h  partition_unittest.cc  record.cc  record.h  record_unittest.cc  record_utils.h  schema.cc  schema.h  schema_unittest.cc  (+9 more)
pelton/dp/: BUILD.bazel  README.md  dp_test.sql  dp_util.cc  dp_util.h
pelton/mysql/: BUILD.bazel  column.cc  column.h  result.cc  result.h  row.cc  row.h  util.cc  util.h
pelton/perf/: BUILD.bazel  perf.cc  perf.h
pelton/planner/: BUILD.bazel  Main.java  Makefile  planner.cc  planner.h  planner_unittest.cc  wrapper.cc
pelton/proxy/: BUILD.bazel  Cargo.toml  README.md
pelton/shards/: BUILD.bazel  README.md  load.cc  pool.cc  pool.h  state.cc  state.h  types.cc  types.h  upgradable_lock.cc  upgradable_lock.h
pelton/sql/: BUILD.bazel  abstract_connection.h  connection.h  eager_executor.cc  eager_executor.h  eager_executor_unittest.cc  executor.cc  executor.h  factory.cc  factory.h  lazy_executor.cc  lazy_executor.h  lazy_executor_unittest.cc  result.cc  result.h
pelton/sqlast/: BUILD.bazel  ast.h  (+23 more)
shards/: BUILD.bazel  README.md  cli.cc  format.sh  load.cc  shards.cc  shards.h  simple-websubmit.sql  state.cc  state.h  todo.inc
tests/: BUILD.bazel  common.cc  common.h  correctness.cc  delf_ecommerce.cc  delf_medical.cc  delf_medical_anonymize.cc  delf_medical_retain.cc  hours.cc  lobsters.cc  medical.cc  medical_nested_views.cc  ownCloud.cc  retailer.cc  shuup.cc  varacc.cc  varown.cc  websubmit.cc
(+1606 files in other folders)
