load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@rules_java//java:defs.bzl", "java_binary")
load("format-java.bzl", "format_java")

# Bazel buildifier: auto formats bazel files.
buildifier(
    name = "buildifier",
    exclude_patterns = [
        "./third_party/**",
        "./experiments/GDPRbench",
    ],
    lint_mode = "fix",
)

# Turn the maven repository to an executable jar.
java_binary(
    name = "google_java_format_binary",
    main_class = "com.google.googlejavaformat.java.Main",
    runtime_deps = [
        "@maven//:com_google_googlejavaformat_google_java_format",
    ],
)

format_java(
    name = "format_java",
    tool = ":google_java_format_binary",
)

# Alias: pelton mysql proxy.
alias(
    name = "pelton",
    actual = "//pelton/proxy",
)
