[workspace]
members = [
    "experiments/ownCloud",
    "mysql_proxy",
]

[workspace.metadata.raze]
workspace_path = "//cargo"

package_aliases_dir = "cargo"
genmode = "Remote"

targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]

[wprkspace.metadata.raze.crates.bindgen.'0.32.2']
default_gen_buildrs = true
extra_aliased_targets = [
    "cargo_bin_bindgen"
]