load("@rules_java//java:defs.bzl", "java_library")
load("@rules_cc//cc:defs.bzl", "cc_binary")

genrule(
    name = "PeltonJNI.h",
    srcs = ["PeltonJNI.java"],
    outs = ["edu_brown_pelton_PeltonJNI.h"],
    cmd = "javac -h $(@D) -d $(@D) $<",
)

cc_binary(
    name = "PeltonJNISO",
    srcs = [
        "PeltonJNI.cc",
        ":PeltonJNI.h",
    ],
    linkshared = 1,  # produce a .so with all dependencies linked
    deps = [
        "//pelton",
        "@bazel_tools//tools/jdk:jni",
        "@glog",
    ],
)

java_library(
    name = "PeltonJNI",
    srcs = ["PeltonJNI.java"],
    data = [":PeltonJNISO"],
)
