[package]
name = "mysql_proxy"
version = "0.1.0"
authors = ["vagrant"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msql-srv = "0.8.7"
slog = "2.7.0"
slog-term = "2.8.0"
ctrlc = "3.1.9"
gflags = "0.3"

[build-dependencies]
bindgen = "0.32.2"

[[bin]]
name = "mysql_proxy"
path = "src/main.rs"


[package.metadata.raze]
# The path at which to write output files.
#
# `cargo raze` will generate Bazel-compatible BUILD files into this path.
# This can either be a relative path (e.g. "foo/bar"), relative to this
# Cargo.toml file; or relative to the Bazel workspace root (e.g. "//foo/bar").
workspace_path = "//mysql_proxy/cargo"

# This causes aliases for dependencies to be rendered in the BUILD
# file located next to this `Cargo.toml` file.
package_aliases_dir = "."

# The set of targets to generate BUILD rules for.
targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]

# The two acceptable options are "Remote" and "Vendored" which
# is used to indicate whether the user is using a non-vendored or
# vendored set of dependencies.
genmode = "Remote"

[package.metadata.raze.crates.bindgen.'0.32.2']
default_gen_buildrs = true
extra_aliased_targets = [
    "cargo_bin_bindgen"
]
