load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "pelton",
    srcs = [
        "pelton.cc",
    ],
    hdrs = [
        "pelton.h",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        ":connection",
        ":prepared",
        "//pelton/dataflow:dstate",
        "//pelton/dataflow:graph",
        "//pelton/dataflow:record",
        "//pelton/dataflow:schema",
        "//pelton/planner",
        "//pelton/shards:state",
        "//pelton/shards:types",
        "//pelton/shards:upgradable_lock",
        "//pelton/shards/sqlengine:engine",
        "//pelton/shards/sqlengine:util",
        "//pelton/sql:result",
        "//pelton/util:status",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "connection",
    hdrs = ["connection.h"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":prepared",
        "//pelton/dataflow:dstate",
        "//pelton/shards:state",
        "//pelton/shards:upgradable_lock",
        "//pelton/sql:executor",
        "//pelton/sql:result",
    ],
)

cc_library(
    name = "prepared",
    srcs = [
        "prepared.cc",
    ],
    hdrs = [
        "prepared.h",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//pelton/dataflow:dstate",
        "//pelton/dataflow:graph",
        "//pelton/dataflow/ops:input",
        "//pelton/dataflow/ops:matview",
        "//pelton/sqlast:ast",
        "@glog",
    ],
)
