load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "pelton",
    srcs = [
        "explain.h",
        "pelton.cc",
    ],
    hdrs = [
        "pelton.h",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        ":connection",
        ":explain",
        ":prepared",
        "//pelton/dataflow:dstate",
        "//pelton/dataflow:graph",
        "//pelton/dataflow:record",
        "//pelton/dataflow:schema",
        "//pelton/planner",
        "//pelton/shards:state",
        "//pelton/shards:types",
        "//pelton/shards/sqlengine:engine",
        "//pelton/sql:result",
        "//pelton/util:status",
        "//pelton/util:upgradable_lock",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@glog",
    ],
)

cc_library(
    name = "explain",
    srcs = [
        "explain.cc",
    ],
    hdrs = [
        "explain.h",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        ":connection",
        "//pelton/shards:state",
    ],
)

cc_library(
    name = "connection",
    srcs = ["connection.cc"],
    hdrs = ["connection.h"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":prepared",
        "//pelton/dataflow:dstate",
        "//pelton/shards:state",
        "//pelton/sql:abstract_connection",
        "//pelton/sql:result",
        "//pelton/sql/rocksdb:connection",
        "//pelton/util:upgradable_lock",
    ],
)

cc_library(
    name = "prepared",
    srcs = [
        "prepared.cc",
    ],
    hdrs = [
        "prepared.h",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//pelton/dataflow:dstate",
        "//pelton/dataflow:graph",
        "//pelton/dataflow/ops:input",
        "//pelton/dataflow/ops:matview",
        "//pelton/sqlast:ast",
        "//pelton/sqlast:hacky",
        "//pelton/util:status",
        "@com_google_absl//absl/strings",
        "@glog",
    ],
)
