load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

cc_library(
    name = "shards",
    srcs = [
        "shards.cc",
        "todo.inc",
    ],
    hdrs = [
        "shards.h",
    ],
    deps = [
        "@absl//absl/strings",
        "//dataflow:dataflow",
        "//shards:state",
        "//shards/sqlengine:engine",
        "//shards/sqlengine:util",
        "//shards/sqlexecutor:executor",
    ],
    visibility = ["//:__subpackages__"],
)

cc_library(
    name = "state",
    srcs = [
        "state.cc",
        "load.cc",
    ],
    hdrs = [
        "state.h",
    ],
    deps = [
        "//dataflow:dataflow",
        "//shards/sqlast:ast",
        "//shards/sqlexecutor:executor",
    ],
    visibility = ["//:__subpackages__"],
)

cc_binary(
    name = "cli",
    srcs = [
        "cli.cc",
    ],
    deps = [
        ":shards",
    ],
)
